<resources>
    <string name="app_name">物联网控制端</string>
    <string name="gate_way">物联网关设置</string>
    <string name="large_text">
        receive
    </string>
    <string name="action_setting">物联网关设置</string>
    <string name="action_setting1">发送信息</string>
    <string name="action_setting2">复位请求</string>
    <string name="action_setting3">休眠请求</string>
    <string name="action_setting4">停机请求</string>
    <string name="action_setting5">工作模式</string>
    <string name="action_setting6">上云连接模式</string>
    <string name="action_setting7">主从模式</string>
    <string name="action_setting8">功能模式</string>
    <string name="action_setting9">数据传输模式</string>
    <string name="action_setting10">显示驱动卡</string>
    <string name="action_setting11">分组数目</string>
    <string name="action_setting12">上云目的地址</string>
    <string name="action_setting13">WIFI连接模式</string>
    <string name="action_setting14">WIFI名称</string>
    <string name="action_setting15">WIFI密码</string>
    <string name="action_setting16">数据传输协议</string>
    <string name="action_setting17">数据组合协议</string>
    <string name="action_setting18">屏显间隔时间</string>
    <string name="action_setting19">采集信息间隔</string>
    <string name="action_setting20">波特率设置</string>
    <string name="action_setting21">休眠时间设定</string>
    <string name="action_setting22">分组ID设置</string>
    <string name="action_setting23">用户ID设置</string>
    <string name="action_setting24">预警值</string>
    <string name="action_setting25">报警值</string>
    <string name="action_setting26">产品名称设置</string>
    <string name="action_setting27">位置信息</string>
    <string name="action_setting28">IP地址A设置</string>
    <string name="action_setting29">IP地址B设置</string>
    <string name="action_setting30">产品密钥设置</string>
    <string name="action_setting31">设备名称设置</string>
    <string name="action_setting32">设备秘钥设置</string>
    <string name="action_setting33">发布名称</string>
    <string name="action_setting34">订阅消息名称</string>
    <string name="action_setting35">询问模块编号</string>
    <string name="action_setting36">物联信息采集</string>
    <string name="title_activity_login">配置IP信息</string>


    <!-- Strings related to login -->
    <string name="username">用户名</string>
    <string name="address">ip地址:</string>
    <string name="password">密码</string>
    <string name="tourist">订阅主题名</string>
    <string name="response">响应主题名</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="dis_tag">标签:</string>
    <string name="dis_name">名称:</string>
    <string name="dis_unit">单位:</string>
    <string name="dis_max">最大值:</string>
    <string name="dis_min">最小值:</string>
    <string name="dis_warn">预警值:</string>
    <string name="dis_alrm">报警值:</string>

    <string name="location_x">经度</string>
    <string name="location_y">纬度</string>

    <string name="ip_port">端口号:</string>


    <string name="usart_x">串口：</string>
    <string name="baud">波特率:</string>
    <string name="length">字节长度：</string>
    <string name="stop">停止位:</string>
    <string name="check">校验位:</string>
    <string name="project">项目:</string>
    <string name="agreement_type">协议类型:</string>
    <string name="rows">行数:</string>
    <string name="display_no">显示屏号:</string>
    <string name="rows_no">显示行号:</string>
    <string name="erase">全擦除   </string>
    <string name="single_choice">单选有效</string>
    <string name="send_display">向显示器发送</string>
    <string name="send_internet">向互联网发送</string>
    <string name="before_data">采集数据前显示:</string>
    <string name="data_format">采集数据格式:</string>
    <string name="before_point">数据位数</string>
    <string name="after_point">保留小数</string>
    <string name="after_data">采集数据后显示:</string>
    <string name="zero">0</string>
    <string name="address_default">"ws://broker.emqx.io:8083"</string>
    <string name="username_default">admin</string>
    <string name="password_default">password</string>
    <string name="tourist_default">test211</string>
    <string name="response_default">message_arrived</string>

    <string name="work_mode">工作模式:</string>
    <string name="connect_mode">连接模式:</string>
    <string name="master_slave_mode">主从模式:</string>
    <string name="function_mode">功能模式:</string>
    <string name="transfer_mode">数据传输模式:</string>
    <string name="display_mode">显示驱动卡:</string>
    <string name="group_number">分组数目:</string>
    <string name="connect_target">上云目的地址:</string>
    <string name="wifi_mode">WIFI连接模式:</string>
    <string name="wifi_name">WIFI名称:</string>
    <string name="wifi_password">WIFI密码:</string>
    <string name="transfer_protocol">数据传输协议:</string>
    <string name="data_tissue">数据组合协议:</string>
    <string name="data_transmission">数据透传接口:</string>
    <string name="data_print">数据打印接口:</string>
    <string name="display_time">屏显间隔时间:</string>
    <string name="internet_time">上云间隔时间:</string>
    <string name="message_time">采集信息间隔:</string>
    <string name="bound">波特率:</string>
    <string name="sleep_time">休眠时间设定:</string>
    <string name="set_id">ID设置:</string>
    <string name="group_id">分组ID设置:</string>
    <string name="user_id">用户ID设置:</string>
    <string name="warn">预警值:</string>
    <string name="alarm">报警值:</string>
    <string name="produce">产品名称设置:</string>
    <string name="action_setting127">位置信息:</string>
    <string name="action_setting128">IP地址A设置:</string>
    <string name="action_setting129">IP地址B设置:</string>
    <string name="product_key">产品密钥设置:</string>
    <string name="device_name">设备名称设置:</string>
    <string name="device_key">设备秘钥设置:</string>
    <string name="action_setting133">发布名称:</string>
    <string name="action_setting134">订阅消息名称:</string>
    <string name="action_setting135">询问模块编号:</string>
    <string name="action_setting136">物联信息采集:</string>
</resources>
